# typo

./: Debug.hs  Lex.hs  LexTest.hs  Main.hs  Makefile  README.md  lex.rs  lextest.rs  main.rs  parse.rs  parsetest.rs  typo.cabal
