name:                typo
version:             0.1.0.0
synopsis:            A TypeScript compiler
-- description:
homepage:            http://github.com/andyfriesen/typo
license:             MIT
license-file:        LICENSE
author:              Andy Friesen
maintainer:          andy.friesen@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable typo
  -- main-is:
  -- other-modules:
  other-extensions:    OverloadedStrings, TemplateHaskell
  build-depends:       base >=4.6 && <4.7
                     , text >=0.11 && <0.12
                     , parsec >=3.1 && <3.2
                     , tasty >=0.8 && <0.9
                     , tasty-hunit >=0.8 && <0.9
                     , tasty-th >=0.1 && <0.2
                     , HUnit >=1.2 && <1.3
  -- hs-source-dirs:
  default-language:    Haskell2010
